<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Radio</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mute">静 音</string>
    <string name="band">波 段</string>
    <string name="search">搜 索</string>
    <string name="keyboard">键 盘</string>
    <string name="loc">远近程</string>
    <string name="scan">浏 览</string>
    <string name="inputfreq_hint">请输入收音频率</string>

</resources>
